started adding unit tests and mocks

--- a/stockApp/test/fixtures/portfolios.yml
+++ b/stockApp/test/fixtures/portfolios.yml
@@ -1,11 +1,7 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+portfolio_one:
+    start_date: 01/16/2015
+    user: jim
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+portfolio_two:
+    start_date: 01/16/2015
+    user: steve
