--- a/stockApp/test/fixtures/users.yml
+++ b/stockApp/test/fixtures/users.yml
@@ -1,11 +1,11 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+jim:
+    name: jimlahey
+    funds: 10000.00
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+steve:
+    name: steve
+    funds: 500.00
+
+ricky:
+    name: rickybobby
+    funds: 500.00
